--- a/deme_django/static/less/deme/polls.less
+++ b/deme_django/static/less/deme/polls.less
@@ -16,9 +16,14 @@
     }
     .title {
       white-space: normal;
-      width: 60px;
       left: -70px;
       position: absolute;
+      b {
+        vertical-align: middle;
+        display: table-cell;
+        width: 60px;
+        height: 40px;
+      }
     }
     .bar {
       #gradient .vertical(@adminbar-top-active, @adminbar-bottom-active);
